--- a/index.html
+++ b/index.html
@@ -530,7 +530,18 @@
           </div>
           <div class="modal-body">
             <p class="lead">Fill out this form and we will get back to you</p>
-            <form>
+            <form
+              name="contact"
+              method="POST"
+              netlify-honeypot="bot-field"
+              data-netlify="true"
+            >
+              <input type="hidden" name="form-name" value="contact" />
+              <p class="hidden">
+                <label
+                  >Don't fill this out if you're human:<input name="bot-field"
+                /></label>
+              </p>
               <div class="mb-3">
                 <label for="first-name" class="col-form-label">
                   First Name:
